added error message

--- a/src/app/region/region.component.html
+++ b/src/app/region/region.component.html
@@ -26,7 +26,7 @@
             <div class="col">
                 <mat-card-header>
                     <mat-card-title>{{region.name}}</mat-card-title>
-                    <mat-card-subtitle>Seed: {{region.seed}}</mat-card-subtitle>
+                    <mat-card-subtitle>ID: {{region._id}}</mat-card-subtitle>
                 </mat-card-header>
             </div>
             <div class="col text-right">
