--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -50,7 +50,7 @@
                     <div class="col">
                         <mat-card-header>
                             <mat-card-title>{{region.name}}</mat-card-title>
-                            <mat-card-subtitle>Seed: {{region._id}}</mat-card-subtitle>
+                            <mat-card-subtitle>ID: {{region._id}}</mat-card-subtitle>
                         </mat-card-header>
                     </div>
                     <div class="col text-right">
