updated to new domain

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,7 @@
 <div class="container">
     <div class="row justify-content-center">
-        <img src="assets\olympus_studios_logo.png">
-    </div>
-    <div class="row justify-content-center">
-        <div class="text-center">© 2021 Copyright:
-            <a href="https://olympus-studios.com/">Olympus-Studios.com</a>
+        <div class="text-center">© 2023 Copyright:
+            <a href="https://blog.daviddiener.de/">daviddiener.de</a>
         </div>
     </div>
 </div>
