upgraded project to angular 16

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="text-center">© 2023 Copyright:
-            <a href="https://blog.daviddiener.de/">daviddiener.de</a>
+            <a href="https://www..daviddiener.de/">daviddiener.de</a>
         </div>
     </div>
 </div>
