--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,14 @@
 <div class="container">
-    <div class="row justify-content-center"> 
-        <h1>Welcome to Odyssey!</h1>
+    <div class="row"> 
+        <div class="col-sm text-center"> 
+            <h1>Welcome to Odyssey!</h1>
+        </div>
     </div>  
-    <div class="row justify-content-center"> 
-        <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/register">Register</button>
-        <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/login">Login</button>
+    <div class="row"> 
+        <div class="col-sm text-center"> 
+            <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/register">Register</button>
+            <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/login">Login</button>
+        </div>
     </div>
 </div>
 
