updated to Angular 16

--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -4,9 +4,9 @@
             <mat-card-header>
                 <mat-card-title>Name: {{city.element.name}}</mat-card-title>
                 <mat-card-subtitle>Description: The {{city.element.description}}</mat-card-subtitle>
-                <mat-list-item *ngFor="let char of city.chars">
+                <mat-card-actions *ngFor="let char of city.chars">
                     <button mat-raised-button color="primary" [routerLink]="['/characters', char._id]">{{char.name}}</button>
-                </mat-list-item>
+                </mat-card-actions>
             </mat-card-header>
         </div>
     </mat-card>
