--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,21 @@
         </div>
     </div>  
     <div class="row"> 
+        <div class="col-sm text-center">
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 typing-effect" >
+                    <span [innerHTML]="htmlText"></span>
+                    <span class="cursor">&nbsp;</span>
+                </div>
+                <div class="col-sm-2"></div> 
+            </div>
+        </div>
+    </div>  
+    <div class="row"> 
         <div class="col-sm text-center"> 
             <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/register">Register</button>
             <button *ngIf="!auth.isLoggedIn()" class="btn-margin" mat-raised-button color="primary" routerLink="/login">Login</button>
         </div>
     </div>
 </div>
-
-
