added loading overlay component

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -27,6 +27,7 @@
     <div class="row justify-content-center" [hidden]="!showOutlet">
         <router-outlet
             (activate)="onActivate()"
-            (deactivate)="onDeactivate()"></router-outlet>
+            (deactivate)="onDeactivate()">
+        </router-outlet>
     </div>
 </div>
