--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,19 @@
 <div class="container">
   <div class="row justify-content-center"> 
     <form (submit)="login()">
-        <div class="form-group">
+       <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="email">
+          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="user.email" #email="ngModel" required email pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+          <div *ngIf="email.invalid && email.touched" class="text-danger">
+            Invalid email format.
+          </div>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="password">
+          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="user.password" #password="ngModel" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9])(.{8,})$">
+          <div *ngIf="password.invalid && password.touched" class="text-danger">
+            Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, one number, and one special character.
+          </div>
         </div>
         <button mat-raised-button color="primary" type="submit" class="btn btn-default">Sign in!</button>
     </form>
